2010-03-18 Homer Xing <homer.xing@gmail.com>

    * Simplify source code.
      Take out "change language" functionality. Use native locale information instead.
      Delete "show Chinese apps" and "show Poland apps" functionality.

2010-03-17 MA Yue <velly.empire@gmail.com>

    * Add "Lucid layout" for window titlebar buttons
    * Merge "automount", "show more permissions setting", "hide size column" into one section

2010-03-16 MA Yue <velly.empire@gmail.com>

    * Add functionality for hiding the SIZE columns in Nautilus list view.
    * Add functionality for changing default window manager, file manager and panel program 
    * Add functionality for changing menubar.
    * Add NScript: some useful Nautilus scripts

2010-03-16 Homer Xing <homer.xing@gmail.com>

    * Adopt distutils. 
      We can use "python setup.py install" to install ailurus now.

2010-03-15 MA Yue <velly.empire@gmail.com>

    * Add functionality for changing /apps/gnome-power-manager/lock/hibernate
                                     /apps/gnome-power-manager/lock/suspend
                                     /apps/nautilus/preferences/desktop_is_home_dir
                                     /apps/gnome-screensaver/user_switch_enabled
                                     /apps/indicator-session/suppress_logout_restart_shutdown
                                     /apps/nautilus/preferences/show_advanced_permissions
                                     /apps/gnome-power-manager/lock/blank_screen

2010-03-15 Starboy Qi <starboy.qi@gmail.com>

    * Change stardict icon
    * Optimize virtualbox installation
    * Add a button in "Tip of the day" window for submitting Linux skills
    * Make several download URL cacheable
    * Add capability for changing name of My computer icon, Home folder icon, Network server icon and Trash icon

2010-03-12 Homer Xing <homer.xing@gmail.com>

    * Use socket instead of ping for detecting server speed.
    * Improve efficiency of server speed detection.